fix spacing | oh | #604

--- a/packages/components-js/src/components/form/textarea-wrapper/textarea-wrapper.scss
+++ b/packages/components-js/src/components/form/textarea-wrapper/textarea-wrapper.scss
@@ -160,6 +160,7 @@
 
     #{$bem-block}__label-text ~ & {
       margin-top: p-rem(-4px);
+      padding-bottom: p-rem(8px);
     }
 
     &--disabled {
